--- a/SetGame/Base.lproj/Main.storyboard
+++ b/SetGame/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
         <!--Menu View Controller-->
         <scene sceneID="2xH-hM-z9o">
             <objects>
-                <viewController id="iH1-yq-4D8" customClass="MenuViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="menu" id="iH1-yq-4D8" customClass="MenuViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EdD-ya-MHL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,11 +36,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jGc-ev-hXJ">
+                                <rect key="frame" x="36" y="447" width="90" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <inset key="contentEdgeInsets" minX="15" minY="15" maxX="15" maxY="15"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="continueGame:" destination="iH1-yq-4D8" eventType="touchUpInside" id="vbD-nW-STp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="s2O-Am-dYr" firstAttribute="centerX" secondItem="EdD-ya-MHL" secondAttribute="centerX" id="KkE-9b-caR"/>
-                            <constraint firstItem="s2O-Am-dYr" firstAttribute="top" secondItem="Faf-rF-3MU" secondAttribute="top" constant="40" id="y4l-q2-QhC"/>
+                            <constraint firstItem="s2O-Am-dYr" firstAttribute="top" secondItem="EdD-ya-MHL" secondAttribute="top" constant="60" id="c9I-sp-LyR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Faf-rF-3MU"/>
                     </view>
@@ -203,7 +212,7 @@
         <!--Graphical Set View Controller-->
         <scene sceneID="N2d-dj-Sie">
             <objects>
-                <viewController id="LeF-HA-Qhp" customClass="GraphicalSetViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="game" id="LeF-HA-Qhp" customClass="GraphicalSetViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bUY-5s-ow8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -214,7 +223,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i1h-yb-XCl">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="rFj-yQ-AQB">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="rFj-yQ-AQB">
                                                 <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tlS-CL-TZw">
